editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -76,7 +76,7 @@
                         {% endif %}
                     </div>
                     {% if project.external_url %}
-                    <div class="link">
+                    <div class="link box">
                         <h2>Web Link</h2>
                         <p class="url"><a href="{{ project.external_url }}">{{ project.external_url }}</a></p>
                     </div>
