--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -306,7 +306,9 @@ body > footer > .contact {
     margin:0 0 0 0;
     padding:0 0 0 0;
     overflow: auto;
-    background:url('images/top-bg.png') no-repeat right 10px;
+    background:url('images/vertical-bg.png') no-repeat 10px top,
+               url('images/bottom-bg.png') no-repeat left 10px,
+               url('images/top-bg.png') no-repeat right 10px;
 }
 
 .slideshow .controls ul {
