--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -326,7 +326,7 @@ body > footer > .contact {
 
 .slideshow .controls img {
     width:100%;
-    border: 1px solid #fff;
+    /*border: 1px solid #fff;*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
