--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -174,6 +174,9 @@ body > footer > .contact {
     color:#fff;
 }
 
+#home .content > div > article.text strong {
+    font-weight:bold;
+}
 
 #home .content > div.one {
     width:100%;
@@ -181,7 +184,7 @@ body > footer > .contact {
 }
 
 #home .content > div.one article.text {
-     float:left; width:50%; height:100%;
+    float:left; width:50%; height:100%;
     font-size:1.1em;
     background:url('images/corner-bg-top-right.png') no-repeat right top,
                url('images/vertical-bg.png') no-repeat 10px 90%,
