--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -1,5 +1,5 @@
-<article class="project" style="float:left;width:18%;">
-        <header><h1>{{ project.name }}</h1></header>
+<article class="project">
+        <header style="display:none;"><h1>{{ project.name }}</h1></header>
         <section class="image">
             {% for image in project.projectimage_set.all %}
                 {% if image.is_main %}
