editing detail page

--- a/futuregreen/templates/portfolio/project_snippet.html
+++ b/futuregreen/templates/portfolio/project_snippet.html
@@ -5,9 +5,7 @@
                 {% if image.is_main %}
                     <a href="{{ project.get_absolute_url }}">
                         <img src="{{ image.list.url }}"
-                             alt="{{ image.caption }}"
-                             width="{{ image.list.width }}"
-                        />
+                             alt="{{ image.caption }}" />
                     </a>
                 {% endif %}
             {% endfor %}
