--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -117,6 +117,11 @@ body > .content {
     -ms-box-sizing: border-box;
     box-sizing: border-box;
     padding: 10px;
+    -moz-box-shadow: 0px 0px 8px 2px #999;
+    -webkit-box-shadow: 0px 0px 8px 2px #999;
+    -o-box-shadow: 0px 0px 8px 2px #999;
+    -ms-box-shadow: 0px 0px 8px 2px #999;
+    box-shadow: 0px 0px 12px 4px #999;
 }
 
 body > footer {
