editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -9,7 +9,7 @@
                 <ul class="slides">
                 {% for image in project.projectimage_set.all %}
                     <li>
-                        <img src="{{ image.detail.url }}" alt="{{ image.caption }}" />
+                        <img id="open" src="{{ image.detail.url }}" alt="{{ image.caption }}" />
                         {% if image.caption %}<p class="flex-caption">{{ image.caption }}</p>{% endif %}
                     </li>
                 {% endfor %}
