editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -63,7 +63,7 @@ body {
         min-width:1024px;
         max-width:1460px;
         padding:10px;
-        position:relative;
+        /*position:relative;*/
         font: normal 87.5% "Segoe UI", "Lucida Sans", Arial, Helvetica, sans-serif;
     }
 
