--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -108,7 +108,7 @@ body > header > nav li {
 }
 
 body > .content {
-    overflow: auto;
+    /*overflow: auto;*/
     background: #fff;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -273,8 +273,8 @@ body > footer > .contact {
 
 /*********** PROJECT DETAIL ************/
 #detail article.project {
-    position:relative;
-    overflow: auto;
+    /*position:relative;
+    overflow: auto;*/
     background: url('images/corner-bg-bottom-right.png') no-repeat right bottom;
 }
 
