--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -403,10 +403,11 @@ body > footer > .contact {
 }
 
 .max {
-    top:100px;
+    top:10px;
     left:0px;
     width:100%;
     margin:0 0 0 0;
+    background: #fff;
     -moz-box-shadow: 0px 0px 8px 2px #999;
     -webkit-box-shadow: 0px 0px 8px 2px #999;
     -o-box-shadow: 0px 0px 8px 2px #999;
