--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -199,6 +199,7 @@
         $(".content").addClass('max');
 
         //FlexSlider: Resize Functions
+        var slider = $(".carousel");
         slider.newSlides.width(slider.width());
         slider.container.width(((slider.count + slider.cloneCount) * slider.width()) + 2000); //extra width to account for quirks
 
