--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -288,6 +288,11 @@ body > footer > .contact {
     width:58.33333%;
     position: relative;
     overflow: auto;
+    -webkit-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    -ms-transition: all 0.5s ease-in;
+    -transition: all 0.5s ease-in;
 }
 
 .slideshow .carousel {
@@ -355,6 +360,10 @@ body > footer > .contact {
     opacity:0.4;
     filter:alpha(opacity=40); /* For IE8 and earlier */
     -webkit-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    -ms-transition: all 0.5s ease-in;
+    -transition: all 0.5s ease-in;
     display:block;
 }
 
@@ -392,6 +401,10 @@ body > footer > .contact {
 .max .slideshow {
     width:100%;
     float:none;
+}
+
+.max .slideshow .controls li {
+    width:8.33333333%
 }
 
 /* details */
