editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -197,7 +197,7 @@
 
     $("#open").click(function () {
         $(".content").addClass('max');
-        $.fn.flexslider.reset();
+        //$.fn.flexslider.reset();
     });
 
     $("#close").click(function () {
