--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -309,7 +309,11 @@ body > footer > .contact {
 .slideshow .carousel .slides img {
     width:100%;
     display:block;
-
+    -webkit-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    -ms-transition: all 0.5s ease-in;
+    -transition: all 0.5s ease-in;
 }
 
 .slideshow .carousel .slides li {
