editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -188,6 +188,7 @@
             controlsContainer:".controls",
             manualControls: "ul li a"
         });
+        $.fn.flexslider.reset();
 
     });
 
