--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -327,6 +327,11 @@ body > footer > .contact {
 
 .slideshow .carousel .slides li {
     position:relative;
+    -webkit-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    -ms-transition: all 0.5s ease-in;
+    -transition: all 0.5s ease-in;
 
 }
 
