editing detail page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -318,9 +318,11 @@ body > footer > .contact {
 
 .slideshow .carousel .slides li {
     position:relative;
-
-    
-
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    -ms-transition: all 0.5s ease-out;
+    -transition: all 0.5s ease-out;
 }
 
 .slideshow .carousel .flex-caption {
