--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -288,6 +288,11 @@ body > footer > .contact {
     width:58.33333%;
     position: relative;
     overflow: auto;
+    -webkit-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    -ms-transition: all 0.5s ease-in;
+    -transition: all 0.5s ease-in;
     
 }
 
@@ -399,7 +404,6 @@ body > footer > .contact {
 
 .max .slideshow {
     width:100%;
-    float:none;
 }
 
 .max .slideshow .controls li {
