--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -165,6 +165,7 @@
     });
 
     $("#open").click(function () {
+        $(".slideshow").css('height':'auto');
         $(".content").addClass('max');
         setTimeout(function(){
             $.fn.flexslider.reset();
