editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -166,7 +166,7 @@
 
     $("#open").click(function () {
         $(".content").addClass('max');
-        setTimeout(function({
+        setTimeout(function(){
             $.fn.flexslider.reset()
         }, 500);
     });
