--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -305,7 +305,11 @@ body > footer > .contact {
 }
 
 .slideshow .carousel .slides {
-
+    -webkit-transition: all 1s ease-in;
+    -moz-transition: all 1s ease-in;
+    -o-transition: all 1s ease-in;
+    -ms-transition: all 1s ease-in;
+    -transition: all 1s ease-in;
 }
 
 .slideshow .carousel .slides img {
