--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -319,6 +319,11 @@ body > footer > .contact {
 
 .slideshow .carousel .slides li {
     position:relative;
+    -webkit-transition: all 1s ease-in;
+    -moz-transition: all 1s ease-in;
+    -o-transition: all 1s ease-in;
+    -ms-transition: all 1s ease-in;
+    -transition: all 1s ease-in;
 
 }
 
