editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -121,7 +121,7 @@
 
 {% block js_local %}
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.flexslider.js"></script>
-<!--<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.resize.min.js"></script>-->
+<script type="text/javascript" src="{{ STATIC_URL }}js/jquery.resize.min.js"></script>
 <script type="text/javascript">
     function Square() {
             $('.square').each(function(){
