--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -315,8 +315,11 @@ body > footer > .contact {
 
 .slideshow .carousel .slides li {
     position:relative;
-
-
+    -webkit-transition: all .3s ease-in;
+    -moz-transition: all .3s ease-in;
+    -o-transition: all .3s ease-in;
+    -ms-transition: all .3s ease-in;
+    -transition: all .3s ease-in;
 }
 
 .slideshow .carousel .flex-caption {
