--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -166,7 +166,9 @@
 
     $("#open").click(function () {
         $(".content").addClass('max');
-        $.fn.flexslider.reset();
+        setTimeout(function(){
+            $.fn.flexslider.reset()
+        }, 300);
     });
 
     $("#close").click(function () {
