--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -166,9 +166,9 @@
 
     $("#open").click(function () {
         $(".content").addClass('max');
-        setTimeout(function(){
-            $.fn.flexslider.reset()
-        }, 600);
+        $(".slideshow").resize(function() {
+            .fn.flexslider.reset()
+        });
     });
 
     $("#close").click(function () {
