editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -167,7 +167,7 @@
     $("#open").click(function () {
         $(".content").addClass('max');
         $(".slideshow").resize(function() {
-            .fn.flexslider.reset()
+            $.fn.flexslider.reset()
         });
     });
 
