editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -178,6 +178,8 @@
         $(".slideshow").resize(function() {
             $.fn.flexslider.reset()
         });
+        $(".carousel img").addClass('open');
+        $(".carousel img").removeClass('close');
     });
 </script>
 {% endblock js_local %}
