--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -153,7 +153,7 @@
             slideToStart: 0,
             animationLoop: true,
             pauseOnAction: true,
-            pauseOnHover: true,
+            pauseOnHover: false,
             controlsContainer:".controls",
             manualControls: "ul li a"
         });
