--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -174,6 +174,7 @@
     });
 
     $(".close").click(function () {
+        alert("test");
         $(".content").removeClass('max');
         $(".slideshow").resize(function() {
             $.fn.flexslider.reset()
