editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -81,6 +81,7 @@
                         <p class="url"><a href="{{ project.external_url }}">{{ project.external_url }}</a></p>
                     </div>
                     {% endif %}
+                    <a class="close">close</a>
                     {% if project.tags.all %}
                     <div class="tags box">
                         <h2>Tags</h2>
