editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -6,7 +6,7 @@
     {% if project.projectimage_set.all %}
         <section class="slideshow">
             <div class="carousel">
-                <a class="zoom">zoom</a>
+                <a class="zoom open">zoom</a>
                 <ul class="slides">
                 {% for image in project.projectimage_set.all %}
                     <li>
