editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -6,8 +6,8 @@
     {% if project.projectimage_set.all %}
         <section class="slideshow">
             <div class="carousel">
-                <a id="open" class="zoom">open</a>
-                <a id="close" class="zoom">close</a>
+                <a id="open" class="zoom">+</a>
+                <a id="close" class="zoom">-</a>
                 <ul class="slides">
                 {% for image in project.projectimage_set.all %}
                     <li>
