editing detail page

--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -6,7 +6,7 @@
     {% if project.projectimage_set.all %}
         <section class="slideshow">
             <div class="carousel">
-                <a id="open" href="#zoomin" class="zoom">+</a>
+                <a id="open" class="zoom" href="#zoomin">+</a>
                 <a id="close" class="zoom" href="#zoomout">-</a>
                 <ul class="slides">
                 {% for image in project.projectimage_set.all %}
