--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -388,6 +388,10 @@ body > footer > .contact {
     color:rgba(255,255,255,0.5);
 }
 
+.slideshow .close {
+    display:none;
+}
+
 .slideshow .flex-direction-nav li {
 
 }
