--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -388,7 +388,7 @@ body > footer > .contact {
     color:rgba(255,255,255,0.5);
 }
 
-.slideshow .close {
+.slideshow #close {
     display:none;
 }
 
