--- a/futuregreen/templates/base.html
+++ b/futuregreen/templates/base.html
@@ -42,6 +42,8 @@
     {% block js_head %}
     <!-- All JavaScript at the bottom, except for Modernizr / Respond. -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
+    <script type="text/javascript" src="http://use.typekit.com/uyl4qjv.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
     {% endblock js_head %}
 
     {% block extra_head %}
