--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -171,6 +171,7 @@ body > footer > .contact {
 #home .content > div > article.text > div {
     padding: 0 10px;
     color:#fff;
+    font-size:.85em;
 }
 
 #home .content > div > article.text strong {
