--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -440,8 +440,9 @@ body > footer > .contact {
 
 .details h1 {
     font-family: felt-tip-roman-1,felt-tip-roman-2;
-    font-size:2.8em;
+    font-size:2.6em;
     line-height:1.1em;
+    color:#666;
 }
 
 .details h2 {
