--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -439,8 +439,8 @@ body > footer > .contact {
 }
 
 .details h1 {
-    font-family: felt-tip-roman-1,felt-tip-roman-2;
-    font-size:2.5em;
+    font-family: felt-tip-woman-1,felt-tip-woman-2;
+    font-size:2.4em;
     line-height:1.1em;
     color:#777;
 }
