--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -197,7 +197,7 @@ body > footer > .contact {
 }
 
 #home .content > div.one article.text h1 {
-    font-family: felt-tip-roman-1,felt-tip-roman-2;
+    font-family: proxima-nova-1,proxima-nova-2;
     line-height:2em;
     font-size:2.8em;
 }
@@ -439,7 +439,7 @@ body > footer > .contact {
 }
 
 .details h1 {
-    font-family: felt-tip-roman-1,felt-tip-roman-2;
+    font-family: proxima-nova-1,proxima-nova-2
     font-size:2.4em;
     line-height:1.1em;
     color:#777;
