edited homepage css

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -197,7 +197,7 @@ body > footer > .contact {
 }
 
 #home .content > div.one article.text h1 {
-    font-family: aviano-sans-1,aviano-sans-2;
+    font-family: ltc-squareface-1,ltc-squareface-2;
     line-height:2em;
     font-size:2.4em;
 }
