--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -72,7 +72,7 @@ h1 {
     padding:0;
     font-size: 1.5em;        /* 24px / 16px = 1.5em */
     font-weight:normal;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
 }
 
 div,p,ul,ol,section,article {
