--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -64,7 +64,9 @@ body {
         max-width:1460px;
         padding:10px;
         position:relative;
-        font: normal 87.5% "Segoe UI", "Lucida Sans", Arial, Helvetica, sans-serif;
+        font-weight:normal;
+        font-size:87.5%;
+        font-family: kulturista-web-1,kulturista-web-2, Arial, Helvetica, sans-serif;
     }
 
 h1 {
