--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -2,20 +2,8 @@
 {% load generic_flatblocks %}
 {% block body_id %}home{% endblock body_id %}
 {% block content %}
-    <div class="group one">
-        {% for project in project_list|slice:":5" %}
-            <article class="project box" id="{{ project.slug }}">
-                {% for image in project.projectimage_set.all %}
-                    {% if image.is_main %}
-                        <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
-                    {% endif %}
-                {%  endfor %}
-            </article>
-        {% endfor %}
-
-    </div>
     <div class="group two">
-       {% for project in project_list|slice:"5:7" %}
+       {% for project in project_list|slice:"3:5" %}
            <article class="project box" id="{{ project.slug }}">
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
@@ -26,10 +14,9 @@
                {%  endfor %}
            </article>
        {% endfor %}
-
     </div>
     <div class="group three">
-        {% for project in project_list|slice:"7:8" %}
+        {% for project in project_list|slice:"5:6" %}
             <article class="project box" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -41,13 +28,7 @@
         {% endfor %}
     </div>
     <div class="group four">
-       <article class="text box" id="profile">
-                <div>
-                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-                <a href="#" class="tease">Read More</a>
-                </div>
-            </article>
-       {% for project in project_list|slice:"8:" %}
+       {% for project in project_list|slice:"6:" %}
             <article class="project box" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -66,7 +47,33 @@
            </div>
        </article>
     </div>
-
+     <div class="group one">
+        {% for project in project_list|slice:":1" %}
+            <article class="project box" id="{{ project.slug }}">
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+            </article>
+        {% endfor %}
+            <article class="text box" id="profile">
+                <div>
+                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+                <a href="#" class="tease">Read More</a>
+                </div>
+            </article>
+           {% for project in project_list|slice:"1:3" %}
+                <article class="project box" id="{{ project.slug }}">
+                    {% for image in project.projectimage_set.all %}
+                        {% if image.is_main %}
+                            <a href="{{ project.get_absolute_url }}">
+                                <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+                        {% endif %}
+                    {%  endfor %}
+                </article>
+            {% endfor %}
+    </div>
 {% endblock content %}
 {% block js_local %}
     <script type="text/javascript">
