--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -2,9 +2,9 @@
 {% load generic_flatblocks %}
 {% block body_id %}home{% endblock body_id %}
 {% block content %}
-    <div class="group two">
+    <div class="sixth">
        {% for project in project_list|slice:"3:5" %}
-           <article class="project box" id="{{ project.slug }}">
+           <article class="project box full" id="{{ project.slug }}">
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
                        <a href="{{ project.get_absolute_url }}">
@@ -15,9 +15,9 @@
            </article>
        {% endfor %}
     </div>
-    <div class="group three">
+    <div class="third">
         {% for project in project_list|slice:"5:6" %}
-            <article class="project box" id="{{ project.slug }}">
+            <article class="project box full featured" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -27,9 +27,9 @@
             </article>
         {% endfor %}
     </div>
-    <div class="group four">
+    <div class="half">
        {% for project in project_list|slice:"6:" %}
-            <article class="project box" id="{{ project.slug }}">
+            <article class="project box third" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}">
@@ -38,18 +38,17 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-       <article class="text box">
-           <div>
-                <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
-                <h2>{{ item.title }}</h2>
-                {{ item.excerpt|truncatewords:20 }}
-                <p><a href="#" class="tease">Read More</a></p>
-           </div>
-       </article>
+        <article class="text box full">
+            <div>
+                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+                <a href="#" class="tease">Read More</a>
+            </div>
+        </article>
+
     </div>
-     <div class="group one">
+     <div class="full">
         {% for project in project_list|slice:":1" %}
-            <article class="project box" id="{{ project.slug }}">
+            <article class="project box sixth" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
                         <a href="{{ project.get_absolute_url }}"><img src="{{ image.list.url }}" /></a>
@@ -57,14 +56,16 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-            <article class="text box" id="profile">
-                <div>
-                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-                <a href="#" class="tease">Read More</a>
-                </div>
-            </article>
+       <article class="text box third" id="news">
+           <div>
+                <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
+                <h2>{{ item.title }}</h2>
+                {{ item.excerpt|truncatewords:20 }}
+                <p><a href="#" class="tease">Read More</a></p>
+           </div>
+       </article>
            {% for project in project_list|slice:"1:3" %}
-                <article class="project box" id="{{ project.slug }}">
+                <article class="project box sixth" id="{{ project.slug }}">
                     {% for image in project.projectimage_set.all %}
                         {% if image.is_main %}
                             <a href="{{ project.get_absolute_url }}">
