--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -3,7 +3,7 @@
 {% block body_id %}home{% endblock body_id %}
 {% block content %}
     <div class="sixth">
-       {% for project in project_list|slice:"3:5" %}
+       {% for project in project_list|slice:"1:3" %}
            <article class="project box full" id="{{ project.slug }}">
                {% for image in project.projectimage_set.all %}
                    {% if image.is_main %}
@@ -16,7 +16,7 @@
        {% endfor %}
     </div>
     <div class="third">
-        {% for project in project_list|slice:"5:6" %}
+        {% for project in project_list|slice:"3:4" %}
             <article class="project box full featured" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -28,7 +28,7 @@
         {% endfor %}
     </div>
     <div class="half">
-       {% for project in project_list|slice:"6:" %}
+       {% for project in project_list|slice:"4:7" %}
             <article class="project box third" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -38,7 +38,7 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-        <article class="text box full">
+        <article class="text box full" id="profile">
             <div>
                 {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
                 <a href="#" class="tease">Read More</a>
@@ -47,7 +47,15 @@
 
     </div>
      <div class="full">
-        {% for project in project_list|slice:":1" %}
+        <article class="text box third" id="news">
+           <div>
+                <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
+                <h2>{{ item.title }}</h2>
+                {{ item.excerpt|truncatewords:20 }}
+                <p><a href="#" class="tease">Read More</a></p>
+           </div>
+       </article>
+        {% for project in project_list|slice:"7:" %}
             <article class="project box sixth" id="{{ project.slug }}">
                 {% for image in project.projectimage_set.all %}
                     {% if image.is_main %}
@@ -56,24 +64,6 @@
                 {%  endfor %}
             </article>
         {% endfor %}
-       <article class="text box third" id="news">
-           <div>
-                <h1 class="date">{{ item.date_published|date:"M d, Y" }}</h1>
-                <h2>{{ item.title }}</h2>
-                {{ item.excerpt|truncatewords:20 }}
-                <p><a href="#" class="tease">Read More</a></p>
-           </div>
-       </article>
-           {% for project in project_list|slice:"1:3" %}
-                <article class="project box sixth" id="{{ project.slug }}">
-                    {% for image in project.projectimage_set.all %}
-                        {% if image.is_main %}
-                            <a href="{{ project.get_absolute_url }}">
-                                <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-                        {% endif %}
-                    {%  endfor %}
-                </article>
-            {% endfor %}
     </div>
 {% endblock content %}
 {% block js_local %}
